# a-isaiahharvey.github.io

./: Cargo.toml  README.md  Trunk.toml  frontend-1fd6ac56407f6d2a.js  frontend-1fd6ac56407f6d2a_bg.wasm  frontend-27fbb52c6605b77c.js  frontend-27fbb52c6605b77c_bg.wasm  frontend-448749562af916eb.js  frontend-448749562af916eb_bg.wasm  frontend-77b81273e326c021.js  frontend-77b81273e326c021_bg.wasm  frontend-928717f3fa5229a0.js  frontend-928717f3fa5229a0_bg.wasm  frontend-9f168152a5cb66ec.js  frontend-9f168152a5cb66ec_bg.wasm  frontend-a0ceeb3bddd49a20.js  frontend-a0ceeb3bddd49a20_bg.wasm  frontend-c8236207b753001b.js  frontend-c8236207b753001b_bg.wasm  frontend-cc26685a7b44172e.js  frontend-cc26685a7b44172e_bg.wasm  frontend-cc6a4d1f32d4a526.js  frontend-cc6a4d1f32d4a526_bg.wasm  frontend-ef47bba209ea50d5.js  frontend-ef47bba209ea50d5_bg.wasm  frontend-f3f9cf7a46056954.js  frontend-f3f9cf7a46056954_bg.wasm  frontend-fd1db0e3c8829f57.js  frontend-fd1db0e3c8829f57_bg.wasm  index.html  main-185c4988017a3e68.css  main-4e8b8a33ad2a37c6.css  main-50e82a277b0aebfd.css  main-701dde91daf51e89.css  main-70558a2b35b03689.css  main-74cd35d7a94b2966.css  main-d4444d1c9ead30e4.css  main-e74084746e8bd38.css  main-fe50bd1caf49a1ee.css  tailwind.config.js
.cargo/: config.toml
.devcontainer/: devcontainer.json
css/: index.scss
src/: components.rs  main.rs  routes.rs
src/components/: layout.rs  nav_menu.rs  snow_container.rs
src/routes/: about.rs  contact.rs  donate.rs  home.rs
