[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.83" }
yew-router = { version = "0.17.0" }
yew = { version = "0.20.0", features = ["csr"] }
serde = "1.0.147"
reqwasm = "0.5.0"
gloo = "0.8.0"
stylist = { version = "0.11.0", features = ["yew_integration", "parser"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3.60"
features = ["CssStyleDeclaration", "HtmlInputElement"]
